feat: созданы псевдосервисы и репозиторий чтоб потом написать на них тесты
#INTERNSHIP-51
